--- a/glowna_aplikacja/templates/cennik.html
+++ b/glowna_aplikacja/templates/cennik.html
@@ -45,7 +45,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href={% url 'home' %}>
-            <img src="images/logo.png" alt="">
+            <img src="{% static 'glowna_aplikacja/images/logo.png' %}" alt="">
             <span>
               Roksa&Wiksa
             </span>
