--- a/glowna_aplikacja/templates/glowna.html
+++ b/glowna_aplikacja/templates/glowna.html
@@ -312,7 +312,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
   </script>
   <!-- end google map js -->
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2548.903879287295!2d18.663907515556183!3d50.29372210652689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471130f900bdc13f%3A0x1333782fd353fd66!2sRynek%2023%2C%2044-100%20Gliwice!5e0!3m2!1spl!2spl!4v1656090223845!5m2!1spl!2spl" width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d148784.69646428752!2d18.549944455991227!3d54.361206313522544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd731c14d4fa6f%3A0x9bb9fbf163b7be8d!2zR2RhxYRzaw!5e0!3m2!1spl!2spl!4v1656252181784!5m2!1spl!2spl" width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 
 </html>
