--- a/glowna_aplikacja/templates/kontakt.html
+++ b/glowna_aplikacja/templates/kontakt.html
@@ -106,10 +106,10 @@
       e-mail: roksa&wiksa@gmail.com
       </p>
   <p class="text-center">
-      ul.Tkacka 23
+      ul.Tkacka 30
       </p>
   <p class="text-center">
-      44-373 Gliwice
+      44-378 Gdańsk
       </p>
   <section class="contact_section layout_padding">
     <div class="container">
