--- a/glowna_aplikacja/templates/glowna.html
+++ b/glowna_aplikacja/templates/glowna.html
@@ -15,6 +15,7 @@
   <meta name="author" content="" />
 
   <title>Roksa&Wiksa</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'glowna_aplikacja/images/logo.png' %}">
 
 
     <link rel="stylesheet" type= "text/css" href="{% static 'glowna_aplikacja/css/style.css' %}"/>
