--- a/glowna_aplikacja/templates/o_szkole.html
+++ b/glowna_aplikacja/templates/o_szkole.html
@@ -17,6 +17,7 @@
   <meta name="author" content="" />
 
   <title>Roksa&Wiksa</title>
+   <link rel="icon" type="image/x-icon" href="{% static 'glowna_aplikacja/images/logo.png' %}">
 
 
 
