--- a/glowna_aplikacja/templates/cennik.html
+++ b/glowna_aplikacja/templates/cennik.html
@@ -13,6 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
+  <link rel="icon" type="image/x-icon" href="{% static 'glowna_aplikacja/images/logo.png' %}">
   <title>Roksa&Wiksa</title>
 
 
